Update all services and add new services